--- a/templates/applications/elasticsearch.yaml
+++ b/templates/applications/elasticsearch.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.elasticsearch.enabled }}
+{{- if .Values.opensearch.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: elasticsearch
+  name: opensearch
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
-    app: elasticsearch
+    app: opensearch
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
@@ -13,18 +13,18 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: elasticsearch
+      app: opensearch
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
-  serviceName: elasticsearch
-  {{- if .Values.elasticsearch.updateStrategy }}
-  updateStrategy: {{- include "docspace.update.strategyType" .Values.elasticsearch.updateStrategy }}
+  serviceName: opensearch
+  {{- if .Values.opensearch.updateStrategy }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.opensearch.updateStrategy }}
   {{- end }}
   template:
     metadata:
       labels:
-        app: elasticsearch
+        app: opensearch
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
@@ -36,16 +36,16 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "docspace.serviceAccountName" . }}
-      {{- if .Values.elasticsearch.podSecurityContext.enabled }}
-      securityContext: {{- omit .Values.elasticsearch.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- if .Values.opensearch.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.opensearch.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if or .Values.elasticsearch.podAffinity .Values.elasticsearch.nodeAffinity }}
+      {{- if or .Values.opensearch.podAffinity .Values.opensearch.nodeAffinity }}
       affinity:
-        {{- with .Values.elasticsearch.podAffinity }}
+        {{- with .Values.opensearch.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- with .Values.elasticsearch.nodeAffinity }}
+        {{- with .Values.opensearch.nodeAffinity }}
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
@@ -71,51 +71,53 @@ spec:
           requests:
             cpu: 100m
             memory: 256Mi
-        command: ['chown', '-R', '1000:1000', '/usr/share/elasticsearch/data']
+        command: ['chown', '-R', '1000:1000', '/usr/share/opensearch/data']
         volumeMounts:
-        - name: elasticsearch-data
-          mountPath: /usr/share/elasticsearch/data
-      {{- with .Values.elasticsearch.initContainers }}
+        - name: opensearch-data
+          mountPath: /usr/share/opensearch/data
+      {{- with .Values.opensearch.initContainers }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
       containers:
-      - name: elasticsearch
-        image: {{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}
-        imagePullPolicy: {{ .Values.elasticsearch.image.pullPolicy }}
-        {{- if .Values.elasticsearch.containerSecurityContext.enabled }}
-        securityContext: {{- omit .Values.elasticsearch.containerSecurityContext "enabled" | toYaml | nindent 10 }}
+      - name: opensearch
+        image: {{ .Values.opensearch.image.repository }}:{{ .Values.opensearch.image.tag }}
+        imagePullPolicy: {{ .Values.opensearch.image.pullPolicy }}
+        {{- if .Values.opensearch.containerSecurityContext.enabled }}
+        securityContext: {{- omit .Values.opensearch.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         ports:
         - containerPort: 9200
           name: http
         - containerPort: 9300
           name: transport
-        {{- if .Values.elasticsearch.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.elasticsearch.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.opensearch.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.opensearch.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.elasticsearch.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.elasticsearch.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.opensearch.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.opensearch.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.elasticsearch.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.elasticsearch.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.opensearch.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.opensearch.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        resources: {{- toYaml .Values.elasticsearch.resources | nindent 10 }}
+        resources: {{- toYaml .Values.opensearch.resources | nindent 10 }}
         env:
         - name: discovery.type
           value: "single-node"
+        - name: DISABLE_SECURITY_PLUGIN
+          value: "true"
         - name: bootstrap.memory_lock
           value: "true"
         - name: ES_JAVA_OPTS
-          value: "-Xms2g -Xmx2g -Dlog4j2.formatMsgNoLookups=true"
+          value: "-Xms3g -Xmx3  g -Dlog4j2.formatMsgNoLookups=true"
         - name: indices.fielddata.cache.size
           value: "30%"
         - name: indices.memory.index_buffer_size
           value: "30%"
         volumeMounts:
-        - name: elasticsearch-data
-          mountPath: /usr/share/elasticsearch/data
+        - name: opensearch-data
+          mountPath: /usr/share/opensearch/data
       volumes:
-      - name: elasticsearch-data
+      - name: opensearch-data
         persistentVolumeClaim:
-          claimName: elasticsearch-data
+          claimName: opensearch-data
 {{- end }}
