--- a/templates/applications/doceditor.yaml
+++ b/templates/applications/doceditor.yaml
@@ -45,10 +45,10 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "docspace.serviceAccountName" . }}
-      {{- if or .Values.podSecurityContext.enabled .Values.apiSystem.podSecurityContext.enabled }}
+      {{- if or .Values.podSecurityContext.enabled .Values.doceditor.podSecurityContext.enabled }}
       {{- $psc := dict }}
-      {{- if .Values.apiSystem.podSecurityContext.enabled }}
-      {{- $psc = .Values.apiSystem.podSecurityContext }}
+      {{- if .Values.doceditor.podSecurityContext.enabled }}
+      {{- $psc = .Values.doceditor.podSecurityContext }}
       {{- else }}
       {{- $psc = .Values.podSecurityContext }}
       {{- end }}
@@ -79,10 +79,10 @@ spec:
       - name: app-wait-storage
         image: {{ include "docspace.imageRepository" (list . .Values.initContainers.waitStorage.image.repository) }}:{{ default .Values.images.tag .Values.initContainers.waitStorage.image.tag }}
         imagePullPolicy: {{ .Values.initContainers.waitStorage.image.pullPolicy }}
-        {{- if or .Values.containerSecurityContext.enabled .Values.apiSystem.containerSecurityContext.enabled }}
+        {{- if or .Values.containerSecurityContext.enabled .Values.doceditor.containerSecurityContext.enabled }}
         {{- $icsc := dict }}
-        {{- if .Values.apiSystem.containerSecurityContext.enabled }}
-        {{- $icsc = .Values.apiSystem.containerSecurityContext }}
+        {{- if .Values.doceditor.containerSecurityContext.enabled }}
+        {{- $icsc = .Values.doceditor.containerSecurityContext }}
         {{- else }}
         {{- $icsc = .Values.containerSecurityContext }}
         {{- end }}
@@ -97,12 +97,12 @@ spec:
       {{- end }}
       containers:
       - name: doceditor
-        image: {{ include "docspace.imageRepository" (list . .Values.apiSystem.image.repository) }}:{{ default .Values.images.tag .Values.doceditor.image.tag }}
+        image: {{ include "docspace.imageRepository" (list . .Values.doceditor.image.repository) }}:{{ default .Values.images.tag .Values.doceditor.image.tag }}
         imagePullPolicy: {{ .Values.doceditor.image.pullPolicy }}
-        {{- if or .Values.containerSecurityContext.enabled .Values.apiSystem.containerSecurityContext.enabled }}
+        {{- if or .Values.containerSecurityContext.enabled .Values.doceditor.containerSecurityContext.enabled }}
         {{- $csc := dict }}
-        {{- if .Values.apiSystem.containerSecurityContext.enabled }}
-        {{- $csc = .Values.apiSystem.containerSecurityContext }}
+        {{- if .Values.doceditor.containerSecurityContext.enabled }}
+        {{- $csc = .Values.doceditor.containerSecurityContext }}
         {{- else }}
         {{- $csc = .Values.containerSecurityContext }}
         {{- end }}
