Add the ability to set up sc for the login and notify containers

--- a/templates/applications/files.yaml
+++ b/templates/applications/files.yaml
@@ -45,7 +45,7 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "docspace.serviceAccountName" . }}
-      {- if or .Values.podSecurityContext.enabled .Values.files.podSecurityContext.enabled }}
+      {{- if or .Values.podSecurityContext.enabled .Values.files.podSecurityContext.enabled }}
       {{- $psc := dict }}
       {{- if .Values.files.podSecurityContext.enabled }}
       {{- $psc = .Values.files.podSecurityContext }}
